@@ -3,12 +3,14 @@ BF: Review: Optimization and corrections
     And the binary becomes a bit smaller again :-)
 BF: Worker: Correction of the unwanted SocketException on stop and restart
     The behavior is correct, only the error output is wrong.
+BF: Worker: Correction of logging if the client closes the connection unexpectedly
+    In some cases, the http_host variable for logging was not yet set.
 BF: HTML: Cleanup of the obsolete type attribute in the style tag
 BF: Project: Update of slogan (Experimental Server Engine)
 BF: (Class)Loader: Optimization and corrections of error handling
     Important errors such as UnsupportedClassVersionError are no longer swallowed.
 BR: Windows: Optimization and corrections for case insensitive commands
-    concerning service.cmd    
+    concerning service.cmd
 CR: XAPI: Change method String Module.explain() to String Module.expose()
 CR: SAPI: Change method String Server.explain() to String Server.expose()
 CR: Documentation: Reduction to English
